--- a/OnlineQuizz.Web/OnlineQuizz.Web.Frontend/Web.config
+++ b/OnlineQuizz.Web/OnlineQuizz.Web.Frontend/Web.config
@@ -11,9 +11,12 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="Facebook.AppId" value="271263836677909"/>
-    <add key="Facebook.AppSecret" value="9f591d993b2bf3f407df32ed3fa08a35"/>
+    <add key="Facebook.AppId" value="271263836677909" />
+    <add key="Facebook.AppSecret" value="9f591d993b2bf3f407df32ed3fa08a35" />
   </appSettings>
+  <connectionStrings>
+    <add name="DatabaseConnection" connectionString="server=hephaestus.database.windows.net;database=2017-OnlineQuizz;user id=danielribamar;password=!Bnch33dr" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2" />
@@ -41,7 +44,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
