--- a/OnlineQuizz.Web/OnlineQuizz.Web.Frontend/packages.config
+++ b/OnlineQuizz.Web/OnlineQuizz.Web.Frontend/packages.config
@@ -11,7 +11,12 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net462" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net462" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net462" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net462" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.6.2" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
+  <package id="Owin" version="1.0" targetFramework="net462" />
 </packages>
